feat: add profile CRUD and docker
